# E_ink_keychain

./: .cproject  .project  CMakeLists.txt  README.md  main.py  sdkconfig
components/screen/: CMakeLists.txt  screen.c  screen.h
main/: CMakeLists.txt  main.c
